# home

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg  stlink.cfg  stm32h7x.cfg  ulink.cfg
.cargo/: config.toml
src/: bump_alloc.rs  lib.rs  main.rs  mqtt.rs  utiliti.rs  wifi.rs
utilities/: Cargo.toml
utilities/src/: gpio.rs  init.rs  key_value.rs  lib.rs  time.rs
utilities/src/gpio/: cc.rs  convert.rs  mod.rs  parse.rs
utilities/src/serial/: convert.rs  mod.rs  parse.rs
utilities/src/wrap/: function_gen.rs  mod.rs  parse_attr.rs  parst_attr.rs
